deploy: defb53992ec17ec1580110901f0055a595c1f885

--- a/index.html
+++ b/index.html
@@ -375,26 +375,30 @@ We return <code>200 OK</code> http status responses for <strong>ALL</strong> req
 
 <ul>
 <li>HTTP status code: <code>200 OK</code></li>
-<li>API response body: <code>&quot;ex&quot;: &quot;Account number is not registered for transactions with this token.&quot;</code></li>
+<li>API response: <code>&quot;ex&quot;: &quot;Account number is not registered for transactions with this token.&quot;</code></li>
 </ul>
 
-<p>In instances where there is a technical breakdown in the processing of the API request, such as querying the wrong endpoint address, you will receive the appropriate http status code such as a <code>404 error</code>.</p>
-
 <p><img src="images/200OK-response-with-ex-error-96d58e35.jpg" alt="200 OK with error ex:" /></p>
+
+<p><em>Above, note the 200 OK status whilst receiving an error ex: response</em></p>
+
+<p>In instances where there is a technical breakdown in the processing of the API request, such as querying the wrong endpoint address, you will receive the appropriate http status code such as a <code>404 error</code>.</p>
 <h1 id='parameters'>Parameters</h1>
-<p>Almost all endpoints accept optional parameters which can be passed as a HTTP query string parameter, e.g. GET /getcustomquicktracking_V3?ref=invoices
+<p>Almost all endpoints accept optional parameters which can be passed as a HTTP query string parameter, e.g. <code>GET /getcustomquicktracking_V3?ref=invoices</code>
 Parameters containing special characters that are passed in a URL request must have their data url encoded.</p>
 
 <p>All parameters are documented along each endpoint.</p>
 <h1 id='libraries'>Libraries</h1>
 <p>We do not currently offer any libraries for our API implementation. We are in the process of creating .NET wrappers that you can use in the future. We will publish more information on this topic once it is ready for use.</p>
 <h1 id='tools'>Tools</h1>
-<p>Some useful tools you can use to access the API include:
-Some useful tools you can use to access the API include:
-+ Insomnia - Cross-platform GraphQL and REST client, available for Mac, Windows, and Linux.
-+ Postman - Cross-platform REST client, available for Mac, Windows, and Linux.
-+ RequestBin - Allows you test webhooks.
-+ Hookbin - Another tool to test webhooks.</p>
+<p>Some useful tools you can use to access the API include:</p>
+
+<ul>
+<li><a href="https://insomnia.rest">Insomnia</a> - Cross-platform GraphQL and REST client, available for Mac, Windows, and Linux.</li>
+<li><a href="https://getpostman.com">Postman</a> - Cross-platform REST client, available for Mac, Windows, and Linux.</li>
+<li><a href="https://requestbin.com">RequestBin</a> - Allows you test webhooks.</li>
+<li><a href="https://hookbin.com">Hookbin</a> - Another tool to test webhooks.</li>
+</ul>
 <h1 id='authentication'>Authentication</h1>
 <p>Authentication against the BEX API ecosystem is a two-part process and is required to prevent access to confidential client data. The process involves the generation of your API security token which is described in the next section. This token is then included in the HTTP headers of your API calls and serves to identify and authenticate you on our platform.</p>
 
