deploy: ed19ae9809c68088481e238059cdc9988d0bc977

--- a/index.html
+++ b/index.html
@@ -346,6 +346,8 @@
 Couple this with our token based Authentication methods and standard HTTP verbs (which are understood by most HTTP clients) you have the capability to orchestrate and manage a number of processes within the courier environment.</p>
 
 <p>We hope that you will build something great and benefit from integrating with our courier API’s.</p>
+
+<p>We want your courier journey to be pain-free - If you run into any difficulties, or perhaps you have some suggestions for us, please do not hesitate to <a href="mailto:it@bex.co.za?subject=Please%20help%20me%20to%20integrate%20with%20you">reach out</a> and we will gladly work with you.</p>
 <h1 id='requirements'>Requirements</h1>
 <p>To make use of our API integration we require the following:</p>
 
