deploy: 6de76772ca2b8c1dfad8243922be33fd5d579bd2

--- a/index.html
+++ b/index.html
@@ -933,8 +933,8 @@ A customer order is going from Sandton to Secunda. The order is made up of <stro
 <p>Looking at the code snippets on the right, you can see that the quotation request is to be structured as follows:</p>
 
 <ul>
-<li><code>&quot;actualWeight&quot;: &quot;43&quot;</code></li>
-<li><code>&quot;dimMass&quot;: &quot;224000&quot;</code> (40x40x20) + (80x80x30) = 22,400</li>
+<li><code>&quot;totalWeight&quot;: &quot;43&quot;</code></li>
+<li><code>&quot;dimMass&quot;: &quot;224000&quot;</code> (40x40x20) + (80x80x30) = 224,000</li>
 </ul>
 
 <p>For the addressing, first prize we would like the co-ordinates of the collection and delivery locations (json snippet 1), otherwise you can pass us the suburb and postcode of the collection and delivery locations (snippet 2 or 3). </p>
