--- a/index.html
+++ b/index.html
@@ -698,7 +698,7 @@ You are however able to submit a combination of waybill and reference numbers in
 </span><span class="p">}</span><span class="w">
 
 </span></code></pre></div>
-<p>The response object contains an items array. The first object in this array is our data definition object. It’s purpose is to communicate the bindings of the column names to their column numbers in the subsequent objects. The purpose of this first object is to allow you to use this information for the binding up of the information to a client grid on your website if you wish.</p>
+<p>The response object contains an items array. The first object in this array is our data definition object. It’s purpose is to communicate the bindings of the column names to their column numbers in the subsequent objects. The purpose of this first object is to allow you to use this information for the binding up of the data to a client grid on your website if you wish.</p>
 
 <table><thead>
 <tr>
