deploy: 11cc486899904a493d27aa47ae4e3af0ce1fa208

--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
         <ul class="search-results"></ul>
       <ul id="toc" class="toc-list-h1">
           <li>
-            <a href="#welcome-to-our-docs-site" class="toc-h1 toc-link" data-title="Welcome to our DOCS site.">Welcome to our DOCS site.</a>
+            <a href="#welcome-to-our-docs-site" class="toc-h1 toc-link" data-title="Welcome to our DOCS site">Welcome to our DOCS site</a>
           </li>
           <li>
             <a href="#requirements" class="toc-h1 toc-link" data-title="Requirements">Requirements</a>
@@ -339,7 +339,7 @@
     <div class="page-wrapper">
       <div class="dark-box"></div>
       <div class="content">
-        <h1 id='welcome-to-our-docs-site'>Welcome to our DOCS site.</h1>
+        <h1 id='welcome-to-our-docs-site'>Welcome to our DOCS site</h1>
 <p>Here at BEX we frequently develop and publish new API’s to assist our customers who wish to gain deeper control and visibility into their courier processes.</p>
 
 <p>These API’s allow for direct integration into our courier platform, allowing data to be read and created using requests in JSON format.
