deploy: b346dbaa88870c9591ea911d2eefcea9ff632a0f

--- a/index.html
+++ b/index.html
@@ -1668,7 +1668,7 @@ and sms alerts.</p>
 <span class="kd">var</span> <span class="nx">tokenStr</span> <span class="o">=</span> <span class="dl">''</span><span class="err">;</span>
 <span class="kd">var</span> <span class="nx">user</span> <span class="o">=</span> <span class="nb">encodeURIComponent</span><span class="p">(</span><span class="dl">'</span><span class="s1">someusername</span><span class="dl">'</span><span class="p">)</span><span class="err">;</span> <span class="c1">//encode the username</span>
 <span class="kd">var</span> <span class="nx">pass</span> <span class="o">=</span> <span class="nb">encodeURIComponent</span><span class="p">(</span><span class="dl">'</span><span class="s1">somepassword</span><span class="dl">'</span><span class="p">)</span><span class="err">;</span> <span class="c1">//encode the password</span>
-<span class="kd">var</span> <span class="nx">host</span> <span class="o">=</span> <span class="dl">'</span><span class="s1">http://dev.bex.co.za</span><span class="dl">'</span><span class="err">;</span>
+<span class="kd">var</span> <span class="nx">host</span> <span class="o">=</span> <span class="dl">'</span><span class="s1">https://beta.bex.co.za</span><span class="dl">'</span><span class="err">;</span>
 <span class="c1">//********** Submit Waybill Service Call ***********</span>
 <span class="c1">// ADDRESSING</span>
 <span class="kd">var</span> <span class="nx">postData</span> <span class="o">=</span> <span class="p">{}</span>
@@ -1770,7 +1770,7 @@ The service supports URL parameters or JSON parameters in the message body</p>
 <p>Example Service Call using JSON message body</p>
 
 <ul>
-<li>URL: <code>http://insight.bex.co.za/api/service/submitbexcollection</code></li>
+<li>URL: <code>https://api.bex.co.za/api/service/submitbexcollection</code></li>
 <li>BODY: <code>{“accountNumber”:”112311”,”waybillNumber”:”ABC123456”, “waybillDate”:”2014-12-16”….. etc….. }</code></li>
 </ul>
 
