--- a/index.html
+++ b/index.html
@@ -329,6 +329,35 @@
                   </li>
               </ul>
           </li>
+          <li>
+            <a href="#webhooks-guide" class="toc-h1 toc-link" data-title="Webhooks Guide">Webhooks Guide</a>
+              <ul class="toc-list-h2">
+                  <li>
+                    <a href="#getting-started" class="toc-h2 toc-link" data-title="Getting Started">Getting Started</a>
+                  </li>
+                  <li>
+                    <a href="#webhook-registration" class="toc-h2 toc-link" data-title="WebHook Registration">WebHook Registration</a>
+                  </li>
+                  <li>
+                    <a href="#unsubscribing" class="toc-h2 toc-link" data-title="Unsubscribing">Unsubscribing</a>
+                  </li>
+                  <li>
+                    <a href="#filters-event-types" class="toc-h2 toc-link" data-title="Filters/Event Types">Filters/Event Types</a>
+                  </li>
+                  <li>
+                    <a href="#basic-payload-structure" class="toc-h2 toc-link" data-title="Basic Payload Structure">Basic Payload Structure</a>
+                  </li>
+                  <li>
+                    <a href="#notifications-property" class="toc-h2 toc-link" data-title="Notifications Property">Notifications Property</a>
+                  </li>
+                  <li>
+                    <a href="#verifying-webhook-signature" class="toc-h2 toc-link" data-title="Verifying WebHook Signature">Verifying WebHook Signature</a>
+                  </li>
+                  <li>
+                    <a href="#event-types-payloads" class="toc-h2 toc-link" data-title="Event Types/Payloads">Event Types/Payloads</a>
+                  </li>
+              </ul>
+          </li>
       </ul>
         <ul class="toc-footer">
             <li><a href='https://bex.co.za/signup'>Open a BEX account</a></li>
@@ -1830,6 +1859,236 @@ Head Office in Johannesburg on +2711 929 9700 and ask for a member of I.T who wi
 you.
 
 </aside>
+<h1 id='webhooks-guide'>Webhooks Guide</h1><h2 id='getting-started'>Getting Started</h2>
+<p>In order to use our WebHooks, you need to ensure that you have a valid and actively trading customer account registered with BEX. Once you have your account number, you will need to request a WebHook API key from our IT department. We will communicate this to you but it is your responsibility to ensure the secrecy of it.</p>
+
+<p>Before we get started, please ensure that you understand and have implemented the necessary methods required to work with WebHooks. </p>
+<h2 id='webhook-registration'>WebHook Registration</h2>
+<p>The registration is a two-part process that requires two individual requests. First, you need to register your WebHook with us by sending a POST request to our <a href="https://webhook.bex.co.za/api/webhooks/registrationsWebHook"> endpoint.<a/></p>
+
+<aside class="notice">
+In the header of your request, you should add a new key pair that represents your WebHook API key, i.e. 
+
+>Headers: 
+```json
+{ “X-InsightWebHooks-Auth”: “Your API Key” }
+```
+
+>The request body is made up of:
+```json
+{
+WebHookUri: “your endpoint where the webhook will post”, 
+Secret: “A secret key that you generate”, 
+Description: “A description for your webhook”, 
+Filters: [ “filterA”, “filterB” ]
+}
+```
+After you have made this request and you receive a 200 OK response, you need to <a href="https://webhook.bex.co.za/api/ActivateWebHook" >send another request</a>, providing the request body with the following values:
+
+>Example of next request
+```json
+{
+    webHookKey: “your API key”
+}
+```
+Once you have made this request and you receive a 200 OK response, your WebHook is activated and should start receiving information momentarily.
+
+
+
+## A Word on Filters
+We provide several different types of WebHook events and you can subscribe to one or all of them. If you want to subscribe to ALL events, then you should ensure that your code can differentiate between these types of events. In this case, you should provide an empty value for the Filters parameter i.e., Filters: []
+
+If you would like to subscribe to certain events only, then you need to provide each event type you want to subscribe to, e.g. Filters: [ “event 1”, “event 2”, … ]
+
+We provide the following filters/event types:
+* pod
+* attempted_delivery
+* waybill_update
+* waybill_note
+* tracking_event
+
+<aside class="notice">
+More detail on each event type and what payload they contain can be found later in this document.
+</aside>
+<h2 id='unsubscribing'>Unsubscribing</h2>
+<p>To unsubscribe from our WebHook, send a  <a href="https://webhook.bex.co.za/api/UnsubscribeWebHook">POST request</a> providing a request body made up of:</p>
+
+<blockquote>
+<p>Sample Request
+<code>json
+{ 
+    webHookKey: “your API key”
+}
+</code></p>
+</blockquote>
+<h2 id='filters-event-types'>Filters/Event Types</h2>
+<p>When parsing the payload that our WebHook sends you, we will provide you with the requested event types or you can elect to receive all of them. </p>
+<h2 id='basic-payload-structure'>Basic Payload Structure</h2>
+<blockquote>
+<p>The basic payload structure for our WebHook would look like this:
+<code>json
+{ 
+    “Id”: “a unique id for this message”, 
+    “Attempt”: 1, 
+    “Properties”: { }, 
+    “Notifications”: [{
+        “Action”: “tracking_type”, 
+        …
+    }]
+}
+</code>
+As part of the request to your WebHook endpoint, we also include a special header:</p>
+</blockquote>
+
+<aside class="notice">
+Header Key: ms-signature, Header Value: sha256=calculatedHashValueGoesHere
+</aside>
+<h2 id='notifications-property'>Notifications Property</h2>
+<p>The notifications property will contain the type of notification you are receiving (“Action”) followed by the list of properties relating to that specific event type. These properties are listed below for your convenience.</p>
+<h2 id='verifying-webhook-signature'>Verifying WebHook Signature</h2>
+<p>Since we are only sending you a request with a payload and that we have no knowledge of your infrastructure, the message will be sent “anonymously” and won’t provide any mechanism to allow authentication to a closed system. It is your responsibility to ensure that the endpoint you specify accepts anonymous users and that you perform message validation as an alternative to authentication.</p>
+
+<p>Every WebHook request that we send will have the special ms-signature header key containing the hash of the body we’ve sent. You should calculate the signature using the supplied secret (during registration) based on the body of the message you’ve received from us.</p>
+
+<blockquote>
+<p>A C# example of calculating the signature would be:
+```C#
+var secret = Encoding.UTF8.GetBytes(secretYouProvidedDuringRegistration);
+using (var hasher = new HMACSHA256(secret)) 
+{
+    var serializedBody = body.ToString();
+    request.Content = new StringContent(serializedBody, Encoding.UTF8, “application/json”);</p>
+</blockquote>
+
+<p>var data = Encoding.UTF8.GetBytes(serializedBody);
+    var sha256 = hasher.ComputeHash(data);
+    var headerValue = EncodingUtilities.ToHex(sha256);
+}
+```</p>
+<h2 id='event-types-payloads'>Event Types/Payloads</h2>
+<p>Each event will be sent using the basic payload structure and contain different properties for each type of event, they are:</p>
+
+<blockquote>
+<p><strong>Tracking Events</strong>
+<code>json
+{
+    “Action”: “tracking_event”, 
+    “WaybillNumber”: “12345”, 
+    “TrackingDate”: “2021-07-12 11:59:25”, 
+    “TrackingUser”: “John Doe”, 
+    “TrackingDescription”: “tracking description”, 
+    “TrackingReference”: “some reference”, 
+    “TrackingTypeId”: -1
+}
+</code></p>
+</blockquote>
+
+<table><thead>
+<tr>
+<th>Tracking Type ID</th>
+<th>Description</th>
+</tr>
+</thead><tbody>
+<tr>
+<td>1</td>
+<td>Shipment handed to courier.</td>
+</tr>
+<tr>
+<td>4</td>
+<td>Shipment departed XYZ branch/depot.</td>
+</tr>
+<tr>
+<td>5</td>
+<td>Shipment arrived at XYZ branch/depot.</td>
+</tr>
+<tr>
+<td>7</td>
+<td>Shipment loaded onto vehicle for delivery.</td>
+</tr>
+<tr>
+<td>9</td>
+<td>Delivery attempt failed because …</td>
+</tr>
+<tr>
+<td>13</td>
+<td>Shipment integrated into our system.</td>
+</tr>
+</tbody></table>
+
+<blockquote>
+<p><strong>Tracking Event   POD</strong>
+<code>json
+{
+    “Action”: “tracking_event”, 
+    “WaybillNumber”: “12345”, 
+    “TrackingDate”: “2021-07-12 11:59:25”, 
+    “TrackingUser”: “John Doe”, 
+    “TrackingDescription”: “tracking description”, 
+    “TrackingReference”: “some reference”, 
+    “TrackingTypeId”: -1
+}   {
+    “Action”: “pod”, 
+    “WaybillNumber”: “12345”, 
+    “PODDate”: “2021-07-12”, 
+    “PODTime”: “11:34:25”, 
+    “Signee”: “Jane Doe”, 
+    “PODPieces”: 1
+}
+</code></p>
+
+<p><strong>Attempted Delivery</strong>
+<code>json
+{
+    “Action”: “attempted_delivery”, 
+    “WaybillNumber”: “12345”, 
+    “AttemptedDate”: “2021-07-12”, 
+    “AttemptedTime”: “11:12:16”, 
+    “NonDeliveryReason”: “Wrong route”, 
+    “DriverComment”: “driver”
+}
+</code></p>
+
+<p><strong>Waybill Note</strong>
+<code>json
+{
+    “Action”: “waybill_note”, 
+    “PostedBy”: “John Doe”, 
+    “NoteDate”: “2021-07-12 12:08:16”, 
+    “NoteText”: “Customer will phone when home”
+}
+</code>
+<strong>Waybill Update</strong>
+<code>json
+{
+    “Action”: “waybill_update”, 
+    “WaybillNumber”: “12345”, 
+    “Service”: “ONC”, 
+    “InsuranceRequired”: false, 
+    “InsuranceValue”: 0, 
+    “ActualWeight”: 1.0, 
+    “VolumetricWeight”: 1.0, 
+    “ChargeableWeight”: 1.0, 
+    “BaseRateTotal”: 25, 
+    “SurchargesTotal”: 17.50, 
+    “SubTotal”: 42.50, 
+    “Vat”: 6.38,
+    “TotalCharges”: 48.88, 
+    “Parcels”: [
+    { 
+          “ParcelBarcodeNumber”: “P1”, 
+          “Dimension1”: 40, 
+          “Dimension2”: 30, 
+          “Dimension3”: 1, 
+          “Weight”: 1.0, 
+          “ParcelDescription”: “”
+    }, …
+    ]
+}   
+</code>
+<aside class="notice">
+To subscribe to any of these events, you can either leave the Filters parameter empty during initial WebHook registration to receive all events, or you can specify the events you want by using the values as shown in the Action parameter of the relevant event type i.e., tracking_event, pod, attempted_delivery, waybill_note, waybill_update.
+</aside></p>
+</blockquote>
 
       </div>
       <div class="dark-box">
