--- a/index.html
+++ b/index.html
@@ -1867,7 +1867,7 @@ you.
 
 <p>Before we get started, please ensure that you understand and have implemented the necessary methods required to work with WebHooks. </p>
 <h2 id='webhook-registration'>WebHook Registration</h2>
-<p>The registration is a two-part process that requires two individual requests. First, you need to register your WebHook with us by sending a post request to our <a href="https://webhook.bex.co.za/api/webhooks/registrationsWebHook">endpoint<a/></p>
+<p>The registration is a two-part process that requires two individual requests. First, you need to register your WebHook with us by sending a post request to our <a href="https://webhook.bex.co.za/api/webhooks/registrationsWebHook">endpoint</a></p>
 
 <p>In the header of your request, you should add a new key pair that represents your WebHook API key.</p>
 
