--- a/index.html
+++ b/index.html
@@ -1863,11 +1863,11 @@ you.
 
 </aside>
 <h1 id='webhooks-guide'>Webhooks Guide</h1><h2 id='getting-started'>Getting Started</h2>
-<p>In order to use our WebHooks, you need to ensure that you have a valid and actively trading customer account registered with BEX. Once you have your account number, you will need to request a WebHook API key from our IT department. We will communicate this to you but it is your responsibility to ensure the secrecy of it.</p>
+<p>In order to use our WebHooks, you need to ensure that you have a valid and actively trading customer account registered with BEX. Once you have your account number, you will need to request a WebHook API key from our <a href="mailto:it@bex.co.za?subject=Please%20help%20me%20to%20integrate%20with%20you">IT department</a>. We will communicate this to you but it is your responsibility to ensure the secrecy of it.</p>
 
 <p>Before we get started, please ensure that you understand and have implemented the necessary methods required to work with WebHooks. </p>
 <h2 id='webhook-registration'>WebHook Registration</h2>
-<p>The registration is a two-part process that requires two individual requests. First, you need to register your WebHook with us by sending a post request to our <a href="https://webhook.bex.co.za/api/webhooks/registrationsWebHook">endpoint</a></p>
+<p>The registration is a two-part process that requires two individual requests. First, you need to register your WebHook with us by sending a post request to our <a href="https://webhook.bex.co.za/api/webhooks/registrationsWebHook">endpoint.</a></p>
 
 <p>In the header of your request, you should add a new key pair that represents your WebHook API key.</p>
 
