--- a/index.html
+++ b/index.html
@@ -1863,13 +1863,17 @@ you.
 
 </aside>
 <h1 id='webhooks-guide'>Webhooks Guide</h1><h2 id='getting-started'>Getting Started</h2>
-<p>In order to use our WebHooks, you need to ensure that you have a valid and actively trading customer account registered with BEX. Once you have your account number, you will need to request a WebHook API key from our <a href="mailto:it@bex.co.za?subject=Please%20help%20me%20to%20integrate%20with%20you">IT department</a>. We will communicate this to you but it is your responsibility to ensure the secrecy of it.</p>
+<p>[comment]: &lt;&gt; (Confirm this is the email address used for webhook api requests)
+In order to use our WebHooks, you need to ensure that you have a valid and actively trading customer account registered with BEX. Once you have your account number, you will need to request a WebHook API key from our <a href="mailto:it@bex.co.za?subject=WebHook%20API%20key%20Request">IT department</a>. We will communicate this to you but it is your responsibility to ensure the secrecy of it.</p>
 
 <p>Before we get started, please ensure that you understand and have implemented the necessary methods required to work with WebHooks. </p>
 <h2 id='webhook-registration'>WebHook Registration</h2>
-<p>The registration is a two-part process that requires two individual requests. First, you need to register your WebHook with us by sending a post request to our <a href="https://webhook.bex.co.za/api/webhooks/registrationsWebHook">endpoint.</a></p>
+<p>The registration is a two-part process that requires two individual requests. </p>
 
-<p>In the header of your request, you should add a new key pair that represents your WebHook API key.</p>
+<ul>
+<li><p>First, you need to register your WebHook with us by sending a post request to our <a href="https://webhook.bex.co.za/api/webhooks/registrationsWebHook">endpoint.</a></p></li>
+<li><p>In the header of your request, you should add a new key pair that represents your WebHook API key.</p></li>
+</ul>
 
 <blockquote>
 <p>Headers: </p>
@@ -1886,7 +1890,9 @@ you.
 </span><span class="err">Filters:</span><span class="w"> </span><span class="p">[</span><span class="w"> </span><span class="err">“filterA”</span><span class="p">,</span><span class="w"> </span><span class="err">“filterB”</span><span class="w"> </span><span class="p">]</span><span class="w">
 </span><span class="p">}</span><span class="w">
 </span></code></pre></div>
-<p>After you have made this request and you receive a 200 OK response, you need to <a href="https://webhook.bex.co.za/api/ActivateWebHook">send another request</a>, providing the request body with the following values:</p>
+<ul>
+<li>After you have made this request and you receive a 200 OK response, you need to <a href="https://webhook.bex.co.za/api/ActivateWebHook">send another request</a>, providing the request body with the following values:</li>
+</ul>
 
 <blockquote>
 <p>Example of next step</p>
@@ -1895,7 +1901,9 @@ you.
     </span><span class="err">webHookKey:</span><span class="w"> </span><span class="err">“your</span><span class="w"> </span><span class="err">API</span><span class="w"> </span><span class="err">key”</span><span class="w">
 </span><span class="p">}</span><span class="w">
 </span></code></pre></div>
-<p>Once you have made this request and you receive a 200 OK response, your WebHook is activated and should start receiving information momentarily.</p>
+<ul>
+<li>Once you have made this request and you receive a 200 OK response, your WebHook is activated and should start receiving information momentarily.</li>
+</ul>
 <h2 id='a-word-on-filters'>A Word on Filters</h2>
 <p>We provide several different types of WebHook events and you can subscribe to one or all of them. If you want to subscribe to ALL events, then you should ensure that your code can differentiate between these types of events. In this case, you should provide an empty value for the Filters parameter i.e., Filters: []</p>
 
@@ -1938,9 +1946,9 @@ More detail on each event type and what payload they contain can be found later 
 </span></code></pre></div>
 <p>As part of the request to your WebHook endpoint, we also include a special header:</p>
 
-<aside class="notice">
-Header Key: ms-signature, Header Value: sha256=calculatedHashValueGoesHere
-</aside>
+<ul>
+<li>Header Key: ms-signature, Header Value: sha256=calculatedHashValueGoesHere</li>
+</ul>
 <h2 id='notifications-property'>Notifications Property</h2>
 <p>The notifications property will contain the type of notification you are receiving (“Action”) followed by the list of properties relating to that specific event type. These properties are listed below for your convenience.</p>
 <h2 id='verifying-webhook-signature'>Verifying WebHook Signature</h2>
@@ -1963,40 +1971,6 @@ using (var hasher = new HMACSHA256(secret))
 }
 </code></pre></div><h2 id='event-types-payloads'>Event Types/Payloads</h2>
 <p>Each event will be sent using the basic payload structure and contain different properties for each type of event.</p>
-
-<p><strong>Tracking ID&#39;s</strong></p>
-
-<table><thead>
-<tr>
-<th>Tracking Type ID</th>
-<th>Description</th>
-</tr>
-</thead><tbody>
-<tr>
-<td>1</td>
-<td>Shipment handed to courier.</td>
-</tr>
-<tr>
-<td>4</td>
-<td>Shipment departed XYZ branch/depot.</td>
-</tr>
-<tr>
-<td>5</td>
-<td>Shipment arrived at XYZ branch/depot.</td>
-</tr>
-<tr>
-<td>7</td>
-<td>Shipment loaded onto vehicle for delivery.</td>
-</tr>
-<tr>
-<td>9</td>
-<td>Delivery attempt failed because …</td>
-</tr>
-<tr>
-<td>13</td>
-<td>Shipment integrated into our system.</td>
-</tr>
-</tbody></table>
 
 <blockquote>
 <p><strong>Tracking Events</strong></p>
@@ -2082,6 +2056,40 @@ using (var hasher = new HMACSHA256(secret))
     </span><span class="p">]</span><span class="w">
 </span><span class="p">}</span><span class="w">   
 </span></code></pre></div>
+<p><strong>Tracking ID&#39;s</strong></p>
+
+<table><thead>
+<tr>
+<th>Tracking Type ID</th>
+<th>Description</th>
+</tr>
+</thead><tbody>
+<tr>
+<td>1</td>
+<td>Shipment handed to courier.</td>
+</tr>
+<tr>
+<td>4</td>
+<td>Shipment departed XYZ branch/depot.</td>
+</tr>
+<tr>
+<td>5</td>
+<td>Shipment arrived at XYZ branch/depot.</td>
+</tr>
+<tr>
+<td>7</td>
+<td>Shipment loaded onto vehicle for delivery.</td>
+</tr>
+<tr>
+<td>9</td>
+<td>Delivery attempt failed because …</td>
+</tr>
+<tr>
+<td>13</td>
+<td>Shipment integrated into our system.</td>
+</tr>
+</tbody></table>
+
 <aside class="notice">
 To subscribe to any of these events, you can either leave the Filters parameter empty during initial WebHook registration to receive all events, or you can specify the events you want by using the values as shown in the Action parameter of the relevant event type i.e., tracking_event, pod, attempted_delivery, waybill_note, waybill_update.
 </aside>
