deploy: 95a30c1276c8a2963814ef14ed45abb3e258b981

--- a/index.html
+++ b/index.html
@@ -1863,8 +1863,7 @@ you.
 
 </aside>
 <h1 id='webhooks-guide'>Webhooks Guide</h1><h2 id='getting-started'>Getting Started</h2>
-<p>[comment]: &lt;&gt; (Confirm this is the email address used for webhook api requests)
-In order to use our WebHooks, you need to ensure that you have a valid and actively trading customer account registered with BEX. Once you have your account number, you will need to request a WebHook API key from our <a href="mailto:it@bex.co.za?subject=WebHook%20API%20key%20Request">IT department</a>. We will communicate this to you but it is your responsibility to ensure the secrecy of it.</p>
+<p>In order to use our WebHooks, you need to ensure that you have a valid and actively trading customer account registered with BEX. Once you have your account number, you will need to request a WebHook API key from our <a href="mailto:it@bex.co.za?subject=WebHook%20API%20key%20Request">IT department</a>. We will communicate this to you but it is your responsibility to ensure the secrecy of it.</p>
 
 <p>Before we get started, please ensure that you understand and have implemented the necessary methods required to work with WebHooks. </p>
 <h2 id='webhook-registration'>WebHook Registration</h2>
