deploy: 3d33237b90922953e2eb10140a8f1dc8de9a4788

--- a/index.html
+++ b/index.html
@@ -1934,7 +1934,9 @@ More detail on each event type and what payload they contain can be found later 
     </span><span class="err">webHookKey:</span><span class="w"> </span><span class="err">“your</span><span class="w"> </span><span class="err">API</span><span class="w"> </span><span class="err">key”</span><span class="w">
 </span><span class="p">}</span><span class="w">
 </span></code></pre></div><h2 id='filters-event-types'>Filters/Event Types</h2>
-<p>When parsing the payload that our WebHook sends you, we will provide you with the requested event types or you can elect to receive all of them. </p>
+<aside class="notice">
+When parsing the payload that our WebHook sends you, we will provide you with the requested event types or you can elect to receive all of them.
+</aside> 
 <h2 id='basic-payload-structure'>Basic Payload Structure</h2>
 <blockquote>
 <p>The basic payload structure for our WebHook would look like this:</p>
