deploy: 928f1f326c279b96573c19ce758766b3eac6c711

--- a/index.html
+++ b/index.html
@@ -2089,7 +2089,7 @@ using (var hasher = new HMACSHA256(secret))
 </tr>
 <tr>
 <td>9</td>
-<td>Delivery attempt failed because …</td>
+<td>Delivery attempt failed because (reason variable)</td>
 </tr>
 <tr>
 <td>13</td>
