deploy: ee5202222be544a4464e2105b5ae2e0ece3126b5

--- a/index.html
+++ b/index.html
@@ -1870,10 +1870,10 @@ you.
 <p>The registration is a two-part process that requires two individual requests. </p>
 
 <ul>
-<li>First, you need to register your WebHook with us by sending a POST request to our WebHook endpoint located at:</li>
-</ul>
+<li><p>First, you need to register your WebHook with us by sending a POST request to our WebHook endpoint located at:</p>
 
-<p>https://webhook.bex.co.za/api/webhooks/registrations </p>
+<p>https://webhook.bex.co.za/api/webhooks/registrations </p></li>
+</ul>
 
 <blockquote>
 <p>In the header of your request, you should add a new key pair that represents your WebHook API key: </p>
@@ -1891,10 +1891,10 @@ you.
 </span><span class="p">}</span><span class="w">
 </span></code></pre></div>
 <ul>
-<li>After you have made this request and you receive a 200 OK response, you need to send another request to:</li>
-</ul>
+<li><p>After you have made this request and you receive a 200 OK response, you need to send another request to:</p>
 
-<p>https://webhook.bex.co.za/api/ActivateWebHook </p>
+<p>https://webhook.bex.co.za/api/ActivateWebHook </p></li>
+</ul>
 
 <blockquote>
 <p>Providing the request body with the following values:</p>
