--- a/index.html
+++ b/index.html
@@ -2067,7 +2067,9 @@ When parsing the payload that our WebHook sends you, we will provide you with th
     </span><span class="p">]</span><span class="w">
 </span><span class="p">}</span><span class="w">   
 </span></code></pre></div>
-<p><strong>Tracking ID Descriptions:</strong></p>
+<ul>
+<li><strong>Tracking Event ID Descriptions:</strong></li>
+</ul>
 
 <table><thead>
 <tr>
