deploy: f64be7620fe305c3733e9a56bb04c5141eb28f04

--- a/index.html
+++ b/index.html
@@ -2070,9 +2070,7 @@ When parsing the payload that our WebHook sends you, we will provide you with th
 <p><br>
 <br></p>
 
-<ul>
-<li><strong>Tracking Event ID Descriptions:</strong></li>
-</ul>
+<p><em>Tracking Event ID Descriptions:</em></p>
 
 <table><thead>
 <tr>
