deploy: 7d03dfc9501b49b75bc82c11f2cae5f73057e891

--- a/index.html
+++ b/index.html
@@ -1958,7 +1958,8 @@ When parsing the payload that our WebHook sends you, we will provide you with th
 <p>As part of the request to your WebHook endpoint, we also include a special header:</p>
 
 <ul>
-<li>Header Key: ms-signature, Header Value: sha256=calculatedHashValueGoesHere</li>
+<li>Header Key: ms-signature </li>
+<li>Header Value: sha256=calculatedHashValueGoesHere</li>
 </ul>
 <h2 id='notifications-property'>Notifications Property</h2>
 <p>The notifications property will contain the type of notification you are receiving (“Action”) followed by the list of properties relating to that specific event type. These properties are listed below for your convenience.</p>
